BusOne02/src/objects/Product_Tactic_vod__c.object
<CustomObject>
    <description>This object stores all product tactics related to a product strategy</description>
    <fields>
        <fullName>Active_vod__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if this Tactic is Active.  Only Product Tactics with this field checked will be copied over during the &quot;Apply Product Plan&quot; process.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>Description of the Tactic</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Strategy_vod__c</fullName>
        <description>Link to product strategy associated with this tactic.</description>
        <label>Product Strategy</label>
        <referenceTo>Product_Strategy_vod__c</referenceTo>
        <relationshipLabel>Product Tactics</relationshipLabel>
        <relationshipName>Product_Tactic_vod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Picklist of products associated with this tactic - for display in the related list</description>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Enbrel</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Xtandi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_vod__c</fullName>
        <description>Picklist describing the type of this product tactic.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contracting</fullName>
                </value>
                <value>
                    <fullName>Co-promote</fullName>
                </value>
                <value>
                    <fullName>Efficacy promotion</fullName>
                </value>
                <value>
                    <fullName>Formulary position</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Tactic</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Tactics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>